# mcp-service

./: .dockerignore  .env.example  .env.production  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  release.yml
docs/: ERRORS.md
example/: main.py
example/clients/: curl-auth.sh  js-integration.mjs  python-client.py
mcp_service/: __init__.py  config.py  errors.py  handler.py  server.py
mcp_service/oauth/: __init__.py  endpoints.py  middleware.py  models.py  pkce.py  storage.py  token_validator.py
mcp_service/oauth/templates/: authorize.html
tests/: __init__.py  conftest.py  test_errors.py  test_handler.py  test_middleware.py  test_oauth.py  test_oauth_edge.py  test_pkce.py  test_server.py  test_server_edge.py  test_storage.py  test_token_validator.py
