[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mcp-service"
version = "0.1.0"
description = "Standalone MCP HTTP server with OAuth 2.1 — plug in any JSON-RPC handler"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "PyJWT>=2.8",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[project.scripts]
mcp-service = "mcp_service.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_service*"]
