[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-service"
version = "0.1.0"
description = "Reusable MCP HTTP server with OAuth 2.1 — plug in any JSON-RPC handler"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AvengerMoJo", email = "noreply@example.com" }]
keywords = ["mcp", "model-context-protocol", "oauth", "oauth2.1", "fastapi", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "PyJWT>=2.8",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "httpx>=0.27",
    "build>=1.0",
    "twine>=5",
]
all = ["mcp-service[dev]"]

[project.urls]
Homepage = "https://github.com/AvengerMoJo/mcp-service"
Repository = "https://github.com/AvengerMoJo/mcp-service"
Issues = "https://github.com/AvengerMoJo/mcp-service/issues"

[project.scripts]
mcp-service = "mcp_service.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_service*"]

[tool.setuptools.package-data]
mcp_service = ["oauth/templates/*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--strict-markers", "--tb=short"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
